feat: Add ShowTypePage class and implement Notion sync service tests